--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,64 +7,74 @@ networks:
 services:
   server:
     container_name: server
-
     depends_on:
-      - db
-
+      - server-db
     build:
       context: ./server
       dockerfile: Dockerfile
-      # target: base
-
     networks:
       - app-tier
-
     volumes:
       - ./server/src:/home/node/server/src
       - ./server/logs:/home/node/server/logs
+      - ./server/tests:/home/node/server/tests
       - ./server/nodemon.json:/home/node/server/nodemon.json
       - ./server/package.json:/home/node/server/package.json
       - ./server/ormconfig.ts:/home/node/server/ormconfig.ts
       - ./server/tsconfig.json:/home/node/server/tsconfig.json
       - ./server/node_modules:/home/node/server/node_modules
-
-    links:
-      - db
-
     expose:
       - "8000"
-
     ports:
       - "8000:8000"
-
     command: yarn dev
 
-  db:
+  storage:
+    container_name: storage
+    depends_on:
+      - storage-db
+    build:
+      context: ./storage
+      dockerfile: Dockerfile
+    networks:
+      - app-tier
+    expose:
+      - "8000"
+    ports:
+      - "7800:8000"
+    command: yarn dev
+
+  server-db:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: "db"
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: "user"
-      # You can use whatever password you like
-      MYSQL_PASSWORD: "password"
-      # Password for root access
       MYSQL_ROOT_PASSWORD: "password"
-      # PORT
-      MYSQL_TCP_PORT: 3307
-      # VIRTUAL_PORT
-      VIRTUAL_PORT: 3307
+      MYSQL_DATABASE: "server_db"
     ports:
       # <Port exposed> : <MySQL Port running inside container>
-      - "3307:3307"
-    expose:
-      # Opens port 3307 on the container
-      - "3307"
+      - "8201:3306"
     networks:
       - app-tier
-    # Where our data will be persisted
+
+  storage-db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_DATABASE: "storage_db"
+
+    ports:
+      # <Port exposed> : <MySQL Port running inside container>
+      - "8202:3306"
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "8300:80"
     volumes:
-      - my-db:/var/lib/mysql
+      - ./phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php
+    networks:
+      - app-tier
 
 volumes:
   my-db:
